// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TableEmpty Component should have fallback checks for certain props: fallback display 1`] = `
<EmptyTable>
  <table />
  <EmptyState
    className="fadein"
    headingLevel="h1"
    icon={[Function]}
    titleText="Lorem ipsum title"
    variant="sm"
  >
    <EmptyStateBody>
      Lorem ipsum message.
    </EmptyStateBody>
  </EmptyState>
</EmptyTable>
`;

exports[`TableEmpty Component should render a basic component: basic 1`] = `
<EmptyTable>
  <table />
  <EmptyState
    className="fadein"
    headingLevel="h2"
    icon={[Function]}
    titleText="Lorem ipsum title"
    variant="sm"
  >
    <EmptyStateBody>
      Lorem ipsum message.
    </EmptyStateBody>
  </EmptyState>
</EmptyTable>
`;
